add configuration for deploy to github pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,13 @@ sudo:
   # npm ci
 
 script:
-  - npm i
   - npm test
   - npm run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $github_token
+  local_dir: build
+  on:
+    branch: master
