--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ cache:
   directories:
   - node_modules
 
+sudo:
+  - false
 
+# before_install:
+#   - npm i -g npm@latest
+
+# install:
+  # npm ci
 
 script:
   - npm i
   - npm test
   - npm run build
-
-deploy:
-  skip_cleanup: true
-  github_token: $github_token
-  local_dir: build
-  on:
-    branch: master
