--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
- "scripts": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test"
@@ -27,5 +27,27 @@
     ]
   },
   "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
+      },
+      "src/index.js": {
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
+      }
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test -- --watch-all=false"
+    }
+  },
+  "devDependencies": {
+    "husky": "^2.4.0"
   }
 }
