--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage"
+    "test:coverage": "react-scripts test --coverage --coveragePathIgnorePatterns=src/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,12 +35,7 @@
         "lines": 60,
         "statements": 60
       }
-    },
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!<rootDir>/node_modules/",
-      "!src/index.ts"
-    ]
+    }
   },
   "homepage": "https://khalzmax.github.io/itera_travis_workshop/",
   "husky": {
