--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
- "scripts": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --coveragePathIgnorePatterns=src/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +28,13 @@
     ]
   },
   "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
+      }
+    }
   }
 }
